components/ra/fap-booklet-generator/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fap-booklet-generator
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        co.elastic.logs/processors.add_fields.target: ""
        co.elastic.logs/processors.add_fields.fields.application.name: "fap-booklet-generator"
        co.elastic.logs/processors.add_fields.fields.application.domain: "fap-booklet-generator"
        co.elastic.logs/processors.add_fields.fields.application.tier: "service"
        co.elastic.logs/processors.add_fields.fields.application.language: "javascript"

    spec:
      containers:
        - name: fap-booklet-generator
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: env-config
              mountPath: "/FBS"
              readOnly: true
            - name: common-views
              mountPath: "/app/build/common-views"
              readOnly: true
            - name: common-public
              mountPath: "/app/build/common-public"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /fap-booklet-generator/health/ready
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
      imagePullSecrets:
        - name: registry-creds
      volumes:
        - name: env-config
          secret:
            secretName: fap-booklet-generator-environment
        - name: common-views
          configMap:
            name: common-pug-views-2026
        - name: common-public
          configMap:
            name: common-pug-public-2026
