components/ra/fap-booklet-generator/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fap-booklet-generator
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
